Add videogames docs
